services/livekit/deployment-config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-server
spec:
  template:
    spec:
      volumes:
      - name: config
        configMap:
          name: livekit-server
          items:
          - key: config.yaml
            path: config.yaml
      containers:
      - name: livekit-server
        args:
        - --config=/etc/livekit-config/config.yaml
        - --disable-strict-config
        volumeMounts:
        - name: config
          mountPath: /etc/livekit-config
          readOnly: true
