services/livekit/deployment-turn-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-livekit-server
spec:
  template:
    spec:
      containers:
      - name: livekit-server
