services/livekit/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 7880
    protocol: TCP
  selector:
    app.kubernetes.io/instance: livekit-server
    app.kubernetes.io/name: livekit-server
